// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. general tests: data attributes - {"backgroundColor":"rebeccapurple","margin":2} 1`] = `
.css-12gg9yz,
[data-css-12gg9yz] {
  background-color: rebeccapurple;
  margin: 2px;
}

<div
  data-css-12gg9yz=""
/>
`;

exports[`2. general tests: media queries - {"fontSize":24,"margin":12,"@media (max-width: 641px)":{"fontSize":20,"margin":10}} 1`] = `
.css-1kjhlaz,
[data-css-1kjhlaz] {
  font-size: 24px;
  margin: 12px;
}

@media (max-width: 641px) {
  .css-1kjhlaz,
  [data-css-1kjhlaz] {
    font-size: 20px;
    margin: 10px;
  }
}

<div
  data-css-1kjhlaz=""
/>
`;

exports[`3. general tests: pseudo elements - {"& button":{"color":"green"}} 1`] = `
.css-1stncom button,
[data-css-1stncom] button {
  color: green;
}

<div
  data-css-1stncom=""
/>
`;

exports[`4. general tests: pseudo states - {":hover":{"backgroundColor":"blue"}} 1`] = `
.css-11zq2gh:hover,
[data-css-11zq2gh]:hover {
  background-color: blue;
}

<div
  data-css-11zq2gh=""
/>
`;

exports[`5. general tests: supports queries - {"@supports (display: grid)":{"display":"grid"}} 1`] = `
@supports (display: grid) {
  .css-9qoyy,
  [data-css-9qoyy] {
    display: grid;
  }
}

<div
  data-css-9qoyy=""
/>
`;

exports[`6. general tests: Appended class - {"&.button":{"color":"green"}} 1`] = `
.css-95zeve.button,
[data-css-95zeve].button {
  color: green;
}

<div
  data-css-95zeve=""
/>
`;

exports[`7. general tests: Child selector - {"> div":{"display":"inline-block"}} 1`] = `
.css-v2yp9i> div,
[data-css-v2yp9i]> div {
  display: inline-block;
}

<div
  data-css-v2yp9i=""
/>
`;

exports[`doesn't mess up stuff that does't have styles 1`] = `<div />`;

exports[`doesn't mess up stuff when styles have a child selector 1`] = `
.css-v2yp9i> div,
[data-css-v2yp9i]> div {
  display: inline-block;
}

<div>
  <span
    data-css-v2yp9i=""
  />
</div>
`;

exports[`enzyme.mount 1`] = `
.glamor-1,
[data-glamor-1] {
  padding: 4em;
  background: papayawhip;
}

.glamor-0,
[data-glamor-0] {
  font-size: 1.5em;
  text-align: center;
  color: palevioletred;
}

<Wrapper>
  <section
    className="glamor-1"
  >
    <Title>
      <h1
        className="glamor-0"
      >
        Hello World, this is my first glamor styled component!
      </h1>
    </Title>
  </section>
</Wrapper>
`;

exports[`enzyme.render 1`] = `
.glamor-1,
[data-glamor-1] {
  padding: 4em;
  background: papayawhip;
}

.glamor-0,
[data-glamor-0] {
  font-size: 1.5em;
  text-align: center;
  color: palevioletred;
}

<section
  class="glamor-1"
>
  <h1
    class="glamor-0"
  >
    Hello World, this is my first glamor styled component!
  </h1>
</section>
`;

exports[`enzyme.shallow 1`] = `
.glamor-0,
[data-glamor-0] {
  padding: 4em;
  background: papayawhip;
}

<section
  className="glamor-0"
>
  <Title>
    Hello World, this is my first glamor styled component!
  </Title>
</section>
`;

exports[`react-test-renderer 1`] = `
.glamor-1,
[data-glamor-1] {
  padding: 4em;
  background: papayawhip;
}

.glamor-0,
[data-glamor-0] {
  font-size: 1.5em;
  text-align: center;
  color: palevioletred;
}

<section
  className="glamor-1"
>
  <h1
    className="glamor-0"
  >
    Hello World, this is my first glamor styled component!
  </h1>
</section>
`;

exports[`works when css-***** selectors don't have styles 1`] = `
<div
  className="glamor-0 glamor-1"
/>
`;

exports[`works when the root element does not have styles 1`] = `
.glamor-0,
[data-glamor-0] {
  padding: 4em;
  background: papayawhip;
}

<div>
  <section
    className="glamor-0"
  />
</div>
`;
